--- a/stay-orgainised/src/App.css
+++ b/stay-orgainised/src/App.css
@@ -90,11 +90,6 @@ body{
   input[type='checkbox']{
     cursor: pointer;
   }
-  #login{
-    align-content:center;
-    margin-left: 25%;
-    width:230px;
-  }
   .ac{
     margin-top:10%
   }
@@ -103,8 +98,8 @@ body{
     /* font-optical-sizing: auto; */
     font-weight: bold;
     font-style: normal;
-    color:  #8fd3f4;
-    text-shadow: 5px 5px 10px #84fab0;
+    color:  #84fab0;
+    text-shadow: 1px 0px 0.5px #8fd3f4;
   }
   .detst{
     /* font-optical-sizing: auto; */
@@ -137,6 +132,7 @@ body{
   .topStyle{
     background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
     border-radius: 0 0 30% 0;
+    height:100px;
   }
   .img,.img1{
     display:block;
@@ -148,9 +144,9 @@ body{
    
   }
   .img1{
-    width:200px !important;
+    width:300px !important;
     height:200px !important;
-    top:-70px;
+    top:-75px;
   }
   .img{
     top:70px;
@@ -229,7 +225,7 @@ footer .h5{
   overflow: scroll;
   margin-bottom:20px;
 }
-.tranc-enter{
+/* .tranc-enter{
   margin-top:-750px;
   background-color:#ede8e8 !important;
   -webkit-transform: translate3d(-750px, 0, 0);
@@ -238,8 +234,11 @@ footer .h5{
 .tranb-exit {
   -webkit-transform: translate3d(750px, 0, 0);
   transform: translate3d(750px, 0, 0);
-}
+} */
 .pwd{
   position: relative;
-    margin-left: -30px;
+    margin-left: -30px !important;
+}
+.pwd1{
+  bottom: -9px;
 }
