--- a/stay-orgainised/src/App.css
+++ b/stay-orgainised/src/App.css
@@ -59,9 +59,9 @@ body, html { overflow-x: hidden; }
       margin-left:10px;
      width:37% !important;
     }
-    /* footer{
-      margin-left:-300px !important;
-    } */
+    footer{
+      margin-left:-302px !important;
+    }
     
 }
 
@@ -303,4 +303,7 @@ tbody{
     /* margin-right: -1000px; */
     /* height: 50%; */
     width: 90% !important;
+}
+.fa{
+ cursor: pointer;
 }
