--- a/stay-orgainised/src/App.css
+++ b/stay-orgainised/src/App.css
@@ -3,8 +3,7 @@
   font-family: "Caveat Brush", cursive;
   font-weight: 400;
   font-style: normal;
-  color:#525a8c;
-  text-shadow: 5px 5px 10px whitesmoke;
+  color:white;
   text-align:center;
   text-decoration: none;
 }
@@ -112,27 +111,30 @@ body{
 .cookie-regular {
   font-family: "Cookie", cursive;
   font-style: normal;
-  color:black;
+  color:white;
   text-align: center;
   font-size: large;
 }
  .bg{
-    background-color: #84fab0;
+    background-color:#2874f0;
   }
-  .navbar,footer, #login,#signUp{
+  .navbar,footer{
     background: #6777ef;
+  }
+  #login,#signUp{
+    background: #fb641b;
   }
   .button {
     display: inline-block;
     border-radius: 4px;
-    background-color:#4c60da;
+    background-color:#fb641b;
     color: #FFFFFF;
     text-align: center;
     transition: all 0.5s;
     cursor: pointer;
   }
   .button:hover,#login:hover{
-    background-color:#4c60da;
+    background-color:#fb641b;
     opacity: 0.6;
   }
   input[type='checkbox']{
@@ -146,7 +148,7 @@ body{
     /* font-optical-sizing: auto; */
     font-weight: bold;
     font-style: normal;
-    color:  #84fab0;
+    color:  #2874f0;
     text-shadow: 1px 0px 0.5px #8fd3f4;
   }
   .detst{
@@ -172,11 +174,11 @@ body{
     transform: scale(1.1);
     opacity:0.5;
   }
-  .topStyle{ 
+  /* .topStyle{ 
     background-image: linear-gradient(120deg, #8fd3f4 0%, #84fab0 100%);
     border-radius: 0 0 30% 0;
     height:100px;
-  }
+  } */
   .img,.img1{
     display:block;
     margin-left:auto;
