--- a/stay-orgainised/src/App.css
+++ b/stay-orgainised/src/App.css
@@ -29,24 +29,26 @@ body, html { overflow-x: hidden; }
     .headLink{
       position: relative;
       /* margin-left: -100px !important; */
-      top:-350px;
+      top:-360px;
       left: -50px;
       background-color: white !important;
       cursor:default;
+      height:60px !important;
     }
     .data{
       position: absolute;
       /* margin-left: -100px !important; */
-     bottom:-390px;
+     bottom:-360px;
       right:-100px;
       cursor:default;
+      background-color: #dbe0e4;
     }
     #search{
       position: relative;
         /* margin-right: 100px !important; */
         right: -400px;
-        top: -25px;
-        background-color: lightgrey !important;
+        top: -35px;
+        background-color: #dbe0e4 !important;
         border:none !important;
     }
     .contDim{
@@ -60,6 +62,7 @@ body, html { overflow-x: hidden; }
     }
     footer{
       margin-left:-302px !important;
+      background-color: #00CED1;
     }
     
 }
@@ -105,7 +108,7 @@ body, html { overflow-x: hidden; }
   }
   
 body{
-    background-color:#ede8e8 !important;
+    background-color:#dbe0e4 !important;
     height:100vh !important;
 }
 .cookie-regular {
@@ -118,8 +121,8 @@ body{
  .bg{
     background-color:#2874f0;
   }
-  .navbar,footer{
-    background: #6777ef;
+  .navbar{
+    background: #dbe0e4;
   }
   #login,#signUp{
     background: #fb641b;
@@ -164,15 +167,16 @@ body{
   #letter{
     text-align: center;
     text-decoration: none;
-    font-size: 40px;
     float:right;
-    background-color: orange;
     border-radius: 100%;
-    margin-top:-40px !important;
+    margin-top:-60px !important;
+    margin-left:-50px !important;
+    height:50px;
+    width:50px;
+
   }
   #letter:hover{
     transform: scale(1.1);
-    opacity:0.5;
   }
   /* .topStyle{ 
     background-image: linear-gradient(120deg, #8fd3f4 0%, #84fab0 100%);
@@ -264,13 +268,13 @@ iframe{
 }
 #navLink .nav-link:hover{
   transform: scale(1.1);
-  color: #d3cfcf !important;
+  color: #0f0e0e !important;
 }
 footer{
   width:100vw;
 }
 footer .h5{
- background-color: #4c60da;
+ background-color:#dbe0e4;
 }
 .wrapper{
   background-color: white !important;
@@ -316,3 +320,26 @@ dropdown-menu li {
     max-height: 280px;
     overflow-y: auto;
 }
+.homepagebg{
+  background-color: lightgray !important;
+}
+.initial{
+  color:white !important;
+  border-radius:30%;
+  padding:10px 15px 15px 15px;
+  position: relative;
+  bottom:-12px;
+}
+.table-striped>tbody>tr:nth-child(odd)>td, 
+.table-striped>tbody>tr:nth-child(odd)>th {
+   background-color:#AFEEEE;
+ }
+ .colour{
+  color:#00CED1;
+ }
+ .bgcolor{
+  background-color:#00CED1;
+ }
+ .colg{
+  color:#157c06 !important;
+ }
