--- a/stay-orgainised/src/App.css
+++ b/stay-orgainised/src/App.css
@@ -140,7 +140,7 @@ body{
   font-size: large;
 }
  .bg,.bgcolor{
-    background-color:#2874f0;
+    background-color:rgb(107, 72, 180);
   }
   #login,#signUp{
     background: #fb641b;
@@ -169,7 +169,7 @@ body{
     /* font-optical-sizing: auto; */
     font-weight: bold;
     font-style: normal;
-    color:  #2874f0;
+    color:  rgb(107, 72, 180);
     text-shadow: 1px 0px 0.5px #8fd3f4;
   }
   .detst{
@@ -290,7 +290,7 @@ iframe{
 }
 footer{
   width:100vw;
-  background-color:#2874f0;
+  background-color:rgb(107, 72, 180);
 }
 footer .h5{
  background-color:#dbe0e4;
@@ -351,10 +351,49 @@ dropdown-menu li {
 }
 
  .colour{
-  color:#2874f0;
+  color:rgb(107, 72, 180);
  }
 
  .colg{
   color:#157c06 !important;
  }
+ .hero-section .hero-background {
+  background-image: url(../public/img/illustrations/BG.webp);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 60rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 0;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width:100% !important;
+ }
+ .start{
+  background-color: rgb(247, 77, 77);
+border-bottom-color :rgb(247, 77, 77);
+border-bottom-left-radius: 8px;
+border-bottom-right-radius: 8px;
+border-bottom-style :solid;
+ }
+ .hero-section .chat-image {
+  width: 80%;
+}
+.b{
+  width: 200px;
+    height: 40px;
+    padding-top: 8px;
+    /* border-radius: 10%; */
+    /* border: 1px solid; */
+    /* margin-left: -20px !important; */
+    position: relative;
+    left: -20px;
+    border: 1px solid #fb641b !important;
+}
+#navmenu{
+  margin-left:0px !important;
+}
  
